--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,20 +1,28 @@
 .input:focus {
+    outline: none;
+    border: gray solid 2px;
 }
 
-.input {
+.superInput:focus {
+    margin: 10px;
+
+    border: 2px solid black;
+    border-radius: 3px;
+    background: white;
 }
 
-.inputWrapper {
-}
-
-.superInput {
+.spanClassName {
+    color: #b9358c;
 }
 
 .errorInput {
-}
-
-.errorInput:focus {
+    border: 2px solid black;
+    border-radius: 3px;
+    background: #fdaaaa;
 }
 
 .error {
+    color: red;
+    font-size: 18px;
+    font-weight: 600;
 }
