--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,12 +1,18 @@
 .App {
     --header_height: 60px;
-}
-
-.hw {
     max-width: 1280px;
     margin: 0 auto;
 }
 
-.hwTitle {
+.hw {
+    padding: 40px 0;
+    border-bottom: 1px solid black;
+    /*max-width: 1280px;*/
+    /*margin: 0 auto;*/
+}
 
+.hwTitle {
+    font-size: 22px;
+    font-weight: bold;
+    line-height: normal;
 }
